Closed Bug 25321 Opened 26 years ago Closed 26 years ago

Conn: Crash at start w/o internet connection (MacOS only)

Categories

(Core :: Internationalization, defect, P3)

PowerPC
All
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: devsin, Assigned: gordon)

References

Details

(Keywords: crash, Whiteboard: [PDT+] w/b minus on 03/03)

Attachments

(3 files)

Mozilla-Mac-M13 (01.26.2000) crashes at startup if you don't have an active internet connection. I'm connecting via TCP/IP (PPP - dialup internet connection) on PPC G4 OS 9. Happens every time. MacsBug returns this: PowerPC unmapped memory exception at 71F4FFC0 every time Moz crashes under these circumstances.
Severity: normal → major
Severity: major → critical
Adding "crash" keyword to all known open crasher bugs.
Keywords: crash
Going to add StdLog from MacsBug of M14 (2000012908) build. BTW, Bug 25706 is DUP of this one. Going to change it and add 'crash' kywrd b/c it's assigned to nobody and I'm not sure when it's going to get looked at. CCing don@netscape.com b/c most of the general crashers have been going to him.
*** Bug 25706 has been marked as a duplicate of this bug. ***
Assigning all open "nobody@mozilla.org" bugs to "leger@netscape.com" to weed thru.
Assignee: nobody → leger
*** Bug 26114 has been marked as a duplicate of this bug. ***
updating component to Necko. looks like it's crahsing in nsDNSService.
Assignee: leger → gagan
Component: Browser-General → Networking
QA Contact: nobody → tever
I think gordon has a dup.
Assignee: gagan → gordon
Target Milestone: M14
Keywords: beta1
*** Bug 26130 has been marked as a duplicate of this bug. ***
*** Bug 27570 has been marked as a duplicate of this bug. ***
Moving PDT+ designation from bug 27570.
Whiteboard: [PDT+]
Gordon--to answer your question from the other bug, you are correct in your guess: * I haven't had any application make a network connection since I booted my Mac * nor do I have a network connection when I launch mozilla Hope that is clearer...
I tried rebooting with no network connection, but I was able to launch and shutdown without a crash. Below is my proposed fix. Could someone that has a build that crashes try it to see if this fixes it? Index: nsDnsService.cpp =================================================================== RCS file: /cvsroot/mozilla/netwerk/dns/src/nsDnsService.cpp,v retrieving revision 1.31 diff -r1.31 nsDnsService.cpp 705,711c705,716 < OSStatus status = OTCloseProvider((ProviderRef)mServiceRef); < CloseOpenTransport(); // should be moved to terminate routine < PRThread* dnsServiceThread; < rv = mThread->GetPRThread(&dnsServiceThread); < if (dnsServiceThread) < PR_Mac_PostAsyncNotify(dnsServiceThread); < rv = mThread->Join(); --- > if (mServiceRef) { > OSStatus status = OTCloseProvider((ProviderRef)mServiceRef); > } > CloseOpenTransport(); // should be moved to terminate routine > > if (mThread) { > PRThread* dnsServiceThread; > rv = mThread->GetPRThread(&dnsServiceThread); > if (dnsServiceThread) > PR_Mac_PostAsyncNotify(dnsServiceThread); > rv = mThread->Join(); > } If it still crashes, try moving the CloseOpenTransport() inside of the if- statement with OTCloseProvider().
Status: NEW → ASSIGNED
Gordon-- I have tried your patch (both ways) and I do get further but I still crash. Details in a minute or two...
after applying Gordon's proposed fix, I crashed in nsIOService::SetOffline, in the call to mDNSService->Shutdown. I believe mDNSService is null. Adding a check there (for mDNSService) got me still further but I still crash... The next crash is in intl/uconv/nsURLProperties.cpp. It seems that nsURLProperties(nsString&) wants the nsIIOService and isn't written to handle failure (it asserts but the code doesn't later check before it dereferences the service. I haven't fixed this crasher yet but I doubt that nsURLProperties should require nsIIOService. Hopefully cata will have some ideas before I get back to this bug.
Sorry, but I'm afraid that I can't help you: I've never touched that file. The latest changes are coming from putterman & warren. Adding ftang to the cc, as he's the original owner.
I can fix the problem in nsDNSService and nsIOService.
Whiteboard: [PDT+] → [PDT+] 2/16/2000 (partial fix)
nsDNSService and nsIOService have been fixed. It looks like we need to fix intl/ uconv next. Frank, who should look at it now?
Assignee: gordon → ftang
Status: ASSIGNED → NEW
Component: Networking → Internationalization
That code is done by warren (you should read cvsblame before decide who to assign first) . Reassign to warren.
Assignee: ftang → warren
Kathy, can you verify my proposed change for this file, and see if it fixes the crash or just moves it further on. Thanks.
Assignee: warren → gordon
since about 2 days now, I can start offline without crashing!
2/16/2000 is over. Need new date.
Whiteboard: [PDT+] 2/16/2000 (partial fix) → [PDT+]
I downloaded and installed the 2000-02-21-18 nightly build of MozMacInstaller, and I'm still getting a crash without a net connection. Has this fix made it through to the nightly builds yet? I would add a Stdlog, but Bugzilla ain't accepting them for some reason..
Yep, still crashing. Not sure if fix has been checked in but, if it has, it ain't workin'. MozMacM14 (2000022108) OS 9.
We are no longer able to reproduce the crash. We have fixed known problems with the shutdown of the DNS and IO services, so a stdlog of a current crash would be helpful. Also, any addional info on machine type and system versions might help us reproduce the crash.
Status: NEW → ASSIGNED
Bugzilla ain't accepting attachments - it keeps complaining that the attachment was empty. I'll email it directly to gordon.
Alright, here it is in all its glory! StdLog from MacsBug 6.6. Crashes every single time startup w/o internet connection. PowerMacintosh G4/450 - First Release Nov. 99 :-( running OS 9 and oodles of software. Take away the SW, still crashes. Might want to move back from internationalization cause I run my Moz in English - you hear dat! (As you can see from my bug posting, I've been up for more than 24 hrs. & I just got back from rainy SF so I'm in a weird mood). If there's any info not included you think'd be helpful go ahead and comment it, I'll be sure to check my mail frequently and do my best to give you a satisfactory reply. (I will not, however, redownload the Moz source and try to build it again. Ugh!...) Sorry for the spam.
Whiteboard: [PDT+] → [PDT+] Checking with chris on beta1 relnote
Whiteboard: [PDT+] Checking with chris on beta1 relnote → [PDT+] Checking with chris on beta1 relnote, possible fix 2/24
If not fixed by 03/03, ok'd to relnote by chriss. OS 9 only, yes?
Keywords: relnote
Whiteboard: [PDT+] Checking with chris on beta1 relnote, possible fix 2/24 → [PDT+] 03/03
Whiteboard: [PDT+] 03/03 → [PDT+] w/b minus on 03/03
No, I got the crash using OS 8.6.
Okay, I've been able to reproduce this crash on a couple of Macs here. With no network connection, OTOpenInternetServices() sometimes fails, and sometimes succeeds. It seems to depend on whether the last used IP address was known to be good. I can fix the crashing bug in nsURLProperties.cpp. Once that's done, the behaviour changes to simply exiting mozilla if we are unable to create the nsIOService. We can limp along a bit further if I change the DNS service to delay calling OTOpenInternetServices() until the first time an actual DNS lookup is attempted. That may allow us to bring mozilla up in offline mode.
I've checked in code to prevent the crash, and I have additional code in my tree that allows us to continue working offline (I can browse file: urls even if OTOpenInternetServices fails). I'm waiting for a review, and then I'll seek approval to check in.
I've checked in a fix that enables offline mode for the Mac and allows browsing file: URLs even if OTOpenInternetServices() fails.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Checked OS 8.6, Kritzer checked OS 9.0 verified: 2000030108
Status: RESOLVED → VERIFIED
As the reporter of bug 25706, I can confirm that the bug is fixed on OS 8.6. Great job guys.
Blocks: 30247
- relnote changed summary for searchability.
Keywords: relnote
OS: All
Summary: Crash at start w/o internet connection → Conn: Crash at start w/o internet connection (MacOS only)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: