Fix for bug 25321 "Crash at start w/o internet connection" on Mac.  Added additional check for failure of GetService() on nsIOService. r=brade, a=jar.